# skein512sum

./: CommandLineArg.c  CommandLineArg.h  LICENSE  Main.c  Skein512sum.c  Skein512sum.h  args.c  args.h  main.c  main.cc  meson.build  meson_options.txt  skein512sum.c  skein512sum.cc  skein512sum.h  skein512sum.hh
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  skein512sum
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
